Fix footer on mobile to make social go above legal text

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -12,3 +12,9 @@ footer {
         }
     }
 }
+
+@media only screen and (max-width: 540px) {
+    p {
+        font-size: 0.8rem;
+    }
+}
